[package]

name = "nibvec"
version = "0.0.4"
description = "Vector data-structure for half-byte values."

license = "MIT"
authors = ["Michael Sproul <micsproul@gmail.com>"]

repository = "https://github.com/michaelsproul/rust_nibble_vec"
documentation = "https://docs.rs/rust_nibble_vec"
readme = "README.md"

keywords = ["vector", "nibble", "slice", "data-structure", "collection"]
categories = ["data-structures"]
edition="2018"

[dependencies]
smallvec = "1.0"

[badges]
travis-ci = { repository = "michaelsproul/rust_nibble_vec" }
